Start fixing spacing and positioning of course instructor info

--- a/src/assets/custom/css/_sass/_training-hero.scss
+++ b/src/assets/custom/css/_sass/_training-hero.scss
@@ -34,6 +34,15 @@
   text-transform: uppercase;
 }
 
+.training-hero__content-container__middle {
+  display: flex;
+  padding: 50px 0;
+}
+
+.training-hero__instructor-info {
+  padding-left: 20px;
+}
+
 .training-hero__course-instructor-title {
   @include ponti-bold;
   color: white;
